// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConformerGenerator should generate conformers 1`] = `
"#1
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    1.6038    1.1775   -1.7436 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.6164   -0.1245   -1.4739 O   0  0  0  0  0  0  0  0  0  0  0  0
    1.7449   -1.4436   -0.9286 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.5103   -1.3101    0.8709 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.4916   -0.0258    1.2038 O   0  0  0  0  0  0  0  0  0  0  0  0
   -1.0764   -0.4433    0.8311 N   0  0  0  0  0  0  0  0  0  0  0  0
    0.8502    0.9124   -2.5818 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.2308    2.0933   -2.0679 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.0263    1.4325   -0.7736 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.3222   -2.4184   -1.1672 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7122   -1.4701   -1.4491 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.5348   -1.1378    1.3795 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.0432   -2.2915    1.2686 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.6645    0.3987    0.8315 H   0  0  0  0  0  0  0  0  0  0  0  0
   -1.4292   -1.1042    1.5348 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;

exports[`ConformerGenerator should generate conformers 2`] = `
"#2
Actelion Java MolfileCreator 1.0

 15 14  0  0  0  0  0  0  0  0999 V2000
    2.8495   -0.2172   -3.1263 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.6164   -0.1245   -1.4739 O   0  0  0  0  0  0  0  0  0  0  0  0
    1.7449   -1.4436   -0.9286 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.5103   -1.3101    0.8709 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.9853   -1.4939    1.6379 O   0  0  0  0  0  0  0  0  0  0  0  0
    2.7789   -1.3729    3.2856 N   0  0  0  0  0  0  0  0  0  0  0  0
    3.4828   -1.1545   -3.3742 H   0  0  0  0  0  0  0  0  0  0  0  0
    3.4061    0.7284   -3.4912 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.8269   -0.2910   -3.6630 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.3222   -2.4184   -1.1672 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7122   -1.4701   -1.4491 H   0  0  0  0  0  0  0  0  0  0  0  0
    0.7806   -2.1350    1.2247 H   0  0  0  0  0  0  0  0  0  0  0  0
    1.0672   -0.2707    1.1218 H   0  0  0  0  0  0  0  0  0  0  0  0
    3.6949   -1.2726    3.7391 H   0  0  0  0  0  0  0  0  0  0  0  0
    2.3186   -2.2231    3.6343 H   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  1  0  0  0  0
  5  6  1  0  0  0  0
  1  7  1  0  0  0  0
  1  8  1  0  0  0  0
  1  9  1  0  0  0  0
  3 10  1  0  0  0  0
  3 11  1  0  0  0  0
  4 12  1  0  0  0  0
  4 13  1  0  0  0  0
  6 14  1  0  0  0  0
  6 15  1  0  0  0  0
M  END
"
`;
